@@ -35,6 +35,8 @@ RESPONSE_SAVE_AS = 6
 RESPONSE_REPLACE = 7
 RESPONSE_NEW = 8
 
+STATUS_PAGE, STATUS_RESOLUTION, STATUS_PATH, STATUS_FILENAME = 0x1, 0x2, 0x4, 0x8
+
 SORT_NAME, SORT_PATH, SORT_SIZE = 1, 2, 3
 
 ACCEPTED_COMMENT_EXTENSIONS = ['txt', 'nfo']
